--- a/templates/ctfd.conf
+++ b/templates/ctfd.conf
@@ -1,6 +1,7 @@
 server {
         listen 80;
         server_name {{ ctfd_site_url }};
+        client_max_body_size 64M;
 
         location / { try_files $uri @ctfd; }
 		location @ctfd {
