--- a/templates/ctfd.conf
+++ b/templates/ctfd.conf
@@ -3,7 +3,7 @@ server {
         server_name {{ ctfd_site_url }};
         client_max_body_size 64M;
 
-        location / { try_files $uri @ctfd; }
+        location {{ ctfd_site_mount }} { try_files $uri @ctfd; }
 		location @ctfd {
 				 include uwsgi_params;
 				 uwsgi_pass unix:{{ ctfd_serve_directory }}/ctfd.socket;
