--- a/templates/ctfd.ini
+++ b/templates/ctfd.ini
@@ -22,7 +22,7 @@ chdir = {{ ctfd_deploy_directory }}
 # If SCRIPT_ROOT is not /
 #mount = /ctf=wsgi.py
 # SCRIPT_ROOT is /
-mount = /=wsgi.py
+mount = {{ ctfd_site_mount }}=wsgi.py
 
 # You shouldn't need to change anything past here
 plugin = python
