--- a/templates/ctfd.conf
+++ b/templates/ctfd.conf
@@ -11,4 +11,6 @@ server {
 			 include uwsgi_params;
 			 uwsgi_pass unix:{{ ctfd_serve_directory }}/ctfd.socket;
 	}
+
+	include /etc/nginx/locations.d/ctfd/*.conf
 }
