Correct nginx config

--- a/templates/ctfd.conf
+++ b/templates/ctfd.conf
@@ -12,5 +12,5 @@ server {
 			 uwsgi_pass unix:{{ ctfd_serve_directory }}/ctfd.socket;
 	}
 
-	include /etc/nginx/locations.d/ctfd/*.conf
+	include /etc/nginx/locations.d/ctfd/*.conf;
 }
