--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # CTFd PostgreSQL Database Information
 ctfd_db: ctfdb
-ctfd_dbuser: ctfdbuser
+ctfd_dbuser: ctfddbuser
 
 # CTFd Config Information
 ctfd_site_url: .ctfd.io
