--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,11 +4,11 @@ ctfd_db: ctfdb
 ctfd_dbuser: ctfddbuser
 
 # CTFd Config Information
-ctfd_site_url: .ctfd.io
+ctfd_site_url: '_'
 ctfd_site_mount: /
 ctfd_email: noreply@ctfd.io
 
 # CTFd setup information
 ctfd_deploy_directory: /opt/ctfd
 ctfd_serve_directory: /srv/ctfd 
-ctfd_commit_hash: 01cb189
+ctfd_version: 1.0.1
