--- a/templates/ctfd.ini
+++ b/templates/ctfd.ini
@@ -23,6 +23,8 @@ chdir = {{ ctfd_deploy_directory }}
 #mount = /ctf=wsgi.py
 # SCRIPT_ROOT is /
 mount = {{ ctfd_site_mount }}=wsgi.py
+venv = {{ ctfd_deploy_directory }}/venv/
+chmod-socket = 666
 
 # You shouldn't need to change anything past here
 plugin = python
